Bug 331012 - topcrash on exit [@timerthread::updatefilter] - r=darin